Implemented last screen in AWT/Swing, removed references to NiftyGUI